--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rea-fortpolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://gem91.github.io/react-myProfile/",
+  "homepage": "http://gem91.github.io/project",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
@@ -23,12 +23,12 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
