--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-macros": "^3.1.0",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.11.4",
+    "install": "^0.13.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
