--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "gsap": "^3.11.4",
     "install": "^0.13.0",
+    "nginx": "^1.0.8",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
